--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     
     <body>
         <div id="screen">
-            
+            <p>Testing 2</p>
+            <p>testing</p>
         </div>
     </body>
 </html>
