--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Jeremy's Page</title>
         
-        <link href="css/css.css" type="text/css">
+        <link rel="stylesheet" href="css/css.css" type="text/css">
     </head>
     
     <body>
