--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Jeremy's Page</title>
+        <title>page</title>
         
         <link rel="stylesheet" href="css/css.css" type="text/css">
     </head>
